# inferbench

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/inferbench/: __init__.py  __main__.py
src/inferbench/backends/: base.py  llamacpp.py  ollama.py  registry.py  transformers.py  vllm.py
src/inferbench/benchmarks/: metrics.py  prompts.py  runner.py  sampler.py
src/inferbench/catalog/: builtin.yaml  models.py  registry.py
src/inferbench/cli/: app.py  output.py
src/inferbench/hardware/: cpu.py  detector.py  gpu.py  memory.py  models.py
src/inferbench/results/: models.py  report.py  storage.py
tests/: conftest.py
tests/unit/: test_backend_registry.py  test_catalog.py  test_hardware.py  test_llamacpp_backend.py  test_metrics.py  test_ollama_backend.py  test_prompts.py  test_report.py  test_result_models.py  test_runner.py  test_sampler.py  test_transformers_backend.py  test_vllm_backend.py
