[project]
name = "inferbench"
version = "0.1.0"
description = "Local LLM inference benchmarking across multiple backends"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Ausmarton Fernandes", email = "ausmarton@fernandes.io" },
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "psutil>=5.9",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
ollama = []
llamacpp = ["llama-cpp-python>=0.3", "huggingface-hub>=0.23"]
vllm = ["vllm>=0.6"]
transformers = [
    "transformers>=4.40",
    "torch>=2.3",
    "accelerate>=0.30",
]
onnx = ["onnxruntime>=1.18"]
all = [
    "inferbench[llamacpp,vllm,transformers,onnx]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "pre-commit>=3.7",
]

[project.scripts]
inferbench = "inferbench.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inferbench"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires running inference backend",
    "slow: takes more than 30 seconds",
]
